fix(header): items alignment

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,9 +1,11 @@
 .container {
   background: #002D69;
-  height: 98px;
+  height: 90px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-left: 48px;
+  padding-right: 48px;
 }
 
 .logout {
@@ -11,7 +13,6 @@
   align-items: center;
   text-decoration: none;
 	float: right;
-  margin-right: 48px;
   color: white;
   width: 45px;
   font-weight: 100;
